--- a/Feeling Feedback/ok/index.html
+++ b/Feeling Feedback/ok/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="../styles/style.css">
     <title>Perfect</title>
 </head>
-<body>
-    <h1>OK</h1>
-    <p>Hier komt dan een leuke spreuk o.i.d.</p>
+<body onload="okText();">
+    
+    <div id="feelingTitle">
+        <h1>OK</h1>
+    </div>
+    <p  id="spreuk"></p>
 
     <div id="refresh">
         <p>Deze pagina gaat terug over </p><p id="seconden">5</p><p> seconden</p>    
