--- a/Feeling Feedback/nietOK/index.html
+++ b/Feeling Feedback/nietOK/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
+    <script src="../script/feelings.js"></script>
     <title>Perfect</title>
 </head>
 <body onload="nietOkText();">
@@ -16,9 +17,9 @@
     <p id="spreuk">Hier komt dan een leuke spreuk o.i.d.</p>
     
     <div id="refresh">
-        <p>Deze pagina gaat terug over </p><p id="seconden">5</p><p> seconden</p>    
+        <p>Deze pagina gaat automatisch terug over </p><p id="seconden"></p><p> seconden</p>    
     </div>
 
-    <script src="../script/feelings.js"></script>
+    
 </body>
 </html>
